--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -8,6 +8,11 @@
     /* Margin bottom by footer height */
     margin-bottom: 90px;
   }
+
+  .container {
+    padding: 60px 0 0 0;
+  }
+
   .padded {
     padding-top: 30px
   }
